--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,23 @@
 .welcomeBacksplash {
   background-color: rgba(99, 99, 99, 0.644)
 }
+body{
+  background-color: black;
+}
+.tab-list {
+  border-bottom: 1px solid #ccc;
+  padding-left: 0;
+}
+
+.tab-list-item {
+  display: inline-block;
+  list-style: none;
+  margin-bottom: -1px;
+  padding: 0.5rem 0.75rem;
+}
+
+.tab-list-active {
+  background-color: white;
+  border: solid #ccc;
+  border-width: 1px 1px 0 1px;
+}
