--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,6 +22,8 @@ body{
   border-width: 1px 1px 0 1px;
 }
 
-.tripContainer {
-  
+.StatsGrid {
+  display:grid;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  grid-template-rows: auto auto auto
 }
